<resources>
    <string name="app_name">KiranaStore</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Fruits</item>
        <item>Vegetables</item>
    </string-array>


    <string-array name="group_names">
        <item>Cosmetics</item>
        <item>Sanitary wares</item>
        <item>Food beverages</item>
        <item>Masalas</item>
        <item>Dry fruits</item>
        <item>Patanjali</item>
    </string-array>


    <string-array name="product_list_items">
        <item>Pineapple</item>
        <item>Apple</item>
        <item>Mango</item>
        <item>Guava</item>
        <item>Litchi</item>
        <item>Pomegrante</item>
        <item>Orange</item>
    </string-array>
    <string-array name="item_prices">
        <item>Rs 10</item>
        <item>Rs 20</item>
        <item>Rs 30</item>
        <item>Rs 40</item>
        <item>Rs 50</item>
        <item>Rs 60</item>
        <item>Rs 70</item>


    </string-array>
    <string-array name="item_weights">
        <item>200 gm</item>
        <item>200 gm</item>
        <item>200 gm</item>
        <item>200 gm</item>
        <item>200 gm</item>
        <item>200 gm</item>
        <item>200 gm</item>

    </string-array>


    <string-array name="Vegetables">
        <item>Veg1</item>
        <item>Veg2</item>
        <item>Veg3</item>
        <item>Veg4</item>
        <item>Veg5</item>

    </string-array>

    <string-array name="Fruits">
        <item>Fruit1</item>
        <item>Fruit2</item>
        <item>Fruit3</item>
        <item>Fruit4</item>

    </string-array>


    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <!-- Keep them in order as the titles are in -->

    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_basket</item>
    </array>


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="action_settings">setting</string>
    <string name="search_hint">delivery location</string>
    <string name="login">Login</string>
    <string name="my_addresses">My Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="msg_for_otp">We will send a 4 digit confirmation code to this number</string>
    <string name="home">Home</string>
    <string name="phone_number">Phone Number</string>
    <string name="_91">+91</string>
    <string name="next">Next</string>
    <string name="category">Category!</string>
    <string name="category_icon">Category Icon</string>
    <string name="current_location_hint">gives approximated reference to your locality and needs to be edited before use</string>
    <string name="welcome">Welcome</string>
    <string name="my_information">My Information</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="pineapple">Pineapple</string>
    <string name="rs_100">Rs. 100</string>
    <string name="_200_gm">200 gm</string>
    <string name="_0">0</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>


</resources>
