<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2.5dp"
    android:paddingBottom="2.5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fff"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="7dip"
            android:layout_marginEnd="7dip"
            android:padding="2dip">
            <ImageView
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:src="@drawable/ic_basket"/>


        </LinearLayout>

        <TextView
            android:id="@+id/from_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/thumbnail"
            android:text="@string/pineapple"
            android:typeface="sans"
            android:textSize="15dip"
            android:textColor="#040404"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/from_name"
            >
            <TextView
                android:id="@+id/price_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/rs_100"
                android:layout_marginLeft="60dip"
                android:layout_marginStart="60dip"
                android:layout_weight="0.23"
                android:padding="5dip"
                android:textSize="12dip"
                android:textStyle="bold"
                android:textColor="#1d1d1d"/>
            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingRight="25dip"
                android:paddingEnd="25dip"
                android:textColor="#343434"
                android:textSize="12dip"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/_200_gm"/>
            <ImageView
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus"
                />
            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingRight="15dip"
                android:paddingLeft="15dip"
                android:textSize="12sp"
                android:text="@string/_0"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal|center_vertical"
                 />
            <ImageView

                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>